NewArchive/0e642db0c0a33953d50e695e8079f270-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In member function ‘void timeBomb::detonate(int)’:
main.cpp:8:23: error: ‘sleep’ was not declared in this scope
             sleep(time);
                       ^
